# 2024_NJUPT_Program_Design

./: CMakeLists.txt  README.md  login.cpp  login.h  login.ui  main.cpp  result_sort.cpp  result_sort.h  update_scores.cpp  update_scores.h
athlete/: athlete_check_results.cpp  athlete_check_results.h  athlete_complaint.cpp  athlete_complaint.h  athlete_mainwindow.cpp  athlete_mainwindow.h
college_admin/: college_admin_check_results.cpp  college_admin_check_results.h  college_admin_complaint.cpp  college_admin_complaint.h  college_mainwindow.cpp  college_mainwindow.h
files/: departments.xlsx  login.txt  sqlite.db
form/: athlete_check_results.ui  athlete_complaint.ui  athlete_mainwindow.ui  college_admin_check_results.ui  college_admin_complaint.ui  college_mainwindow.ui  login.ui  management_of_competition.ui  management_of_competition_cell.ui  management_of_competiton_search.ui  management_of_participating_departments.ui  referee_handle_complaint.ui  referee_handle_complaint_cell.ui  referee_mainwindow.ui  referee_submit_results.ui  referee_submit_results_cell.ui  sys_admin_check_results.ui  sys_admin_handle_complaint.ui  sys_admin_mainwindow.ui  sys_admin_review_results.ui
referee/: referee_handle_complaint.cpp  referee_handle_complaint.h  referee_handle_complaint_cell.cpp  referee_handle_complaint_cell.h  referee_mainwindow.cpp  referee_mainwindow.h  referee_submit_results.cpp  referee_submit_results.h  referee_submit_results_cell.cpp  referee_submit_results_cell.h
sys_admin/: management_of_competition.cpp  management_of_competition.h  management_of_competition_cell.cpp  management_of_competition_cell.h  management_of_competiton_search.cpp  management_of_competiton_search.h  management_of_participating_departments.cpp  management_of_participating_departments.h  sys_admin_check_results.cpp  sys_admin_check_results.h  sys_admin_handle_complaint.cpp  sys_admin_handle_complaint.h  sys_admin_mainwindow.cpp  sys_admin_mainwindow.h  sys_admin_review_results.cpp  sys_admin_review_results.h
